Fixing label visibility

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -762,7 +762,7 @@ ul#main-accordion .panel-heading .nav-icon {
 .user-auth .local-forms {
   position: relative;
   overflow: hidden;
-  height: 250px;
+  height: 280px;
 }
 
 .g-recaptcha {
